[gd_scene load_steps=8 format=3 uid="uid://ci47ylf44fdg8"]

[ext_resource type="Script" path="res://Scripts/Game/GameLogic.gd" id="1_sqss8"]
[ext_resource type="Texture2D" uid="uid://3f28bn54dy1a" path="res://Assets/Static/Escritorio.png" id="2_48fq7"]
[ext_resource type="Texture2D" uid="uid://fdfwmjrr4hd5" path="res://Assets/Saltosusto.png" id="2_inhka"]
[ext_resource type="Texture2D" uid="uid://dystmd5t26v3j" path="res://Assets/Static/Ventana_Derecha.png" id="3_ch0ee"]
[ext_resource type="Texture2D" uid="uid://n7r0m3ichfvj" path="res://Assets/Static/Ventana_izquierda.png" id="4_8wcoh"]
[ext_resource type="Texture2D" uid="uid://c2nrmodxfpdqm" path="res://Assets/Static/Puerta.png" id="5_vcdfj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d7ua2"]
size = Vector2(117, 647)

[node name="MainScene" type="Node2D"]
script = ExtResource("1_sqss8")

[node name="Static" type="Node2D" parent="."]

[node name="Escritorio" type="Sprite2D" parent="Static"]
position = Vector2(575.5, 323.5)
scale = Vector2(0.896094, 0.898611)
texture = ExtResource("2_48fq7")

[node name="VentanaDerecha" type="Sprite2D" parent="Static"]
position = Vector2(1716, 324)
scale = Vector2(0.896094, 0.898611)
texture = ExtResource("3_ch0ee")

[node name="VentanaIzquierda" type="Sprite2D" parent="Static"]
position = Vector2(-565, 324)
scale = Vector2(0.896094, 0.898611)
texture = ExtResource("4_8wcoh")

[node name="Puerta" type="Sprite2D" parent="Static"]
position = Vector2(-1704, 324)
scale = Vector2(0.896094, 0.898611)
texture = ExtResource("5_vcdfj")

[node name="Puerta2" type="Sprite2D" parent="Static"]
position = Vector2(2851, 324)
scale = Vector2(0.896094, 0.898611)
texture = ExtResource("5_vcdfj")

[node name="POV" type="Camera2D" parent="."]
position = Vector2(576, 321)

[node name="MoveLeft" type="Area2D" parent="POV"]
position = Vector2(-491, -10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="POV/MoveLeft"]
position = Vector2(-25.5, 11.5)
shape = SubResource("RectangleShape2D_d7ua2")

[node name="MoveRight" type="Area2D" parent="POV"]
position = Vector2(539, -11)

[node name="CollisionShape2D" type="CollisionShape2D" parent="POV/MoveRight"]
position = Vector2(-25.5, 11.5)
shape = SubResource("RectangleShape2D_d7ua2")

[node name="Triangulin" type="Sprite2D" parent="."]
position = Vector2(598, 307)
scale = Vector2(0.575718, 0.549123)
texture = ExtResource("2_inhka")

[node name="Targets" type="Node2D" parent="."]

[node name="Left" type="Marker2D" parent="Targets"]
position = Vector2(-1684, 332)

[node name="Right" type="Marker2D" parent="Targets"]
position = Vector2(2873, 332)

[connection signal="mouse_entered" from="POV/MoveLeft" to="." method="_on_move_left_mouse_entered"]
[connection signal="mouse_exited" from="POV/MoveLeft" to="." method="_on_move_left_mouse_exited"]
[connection signal="mouse_entered" from="POV/MoveRight" to="." method="_on_move_right_mouse_entered"]
[connection signal="mouse_exited" from="POV/MoveRight" to="." method="_on_move_right_mouse_exited"]
